@@ -1,3 +1,8 @@
+2023-08-28  G. Branden Robinson <g.branden.robinson@gmail.com>
+
+	* Makefile.am (EXTRA_DIST): Ship ancient groff ChangeLog files
+	split off from ChangeLog.115 (.old, .111, .112, .113, .114).
+
 2023-08-27  G. Branden Robinson <g.branden.robinson@gmail.com>
 
 	* src/roff/troff/node.cpp (translate_font): Validate arguments.
